--- a/index.html
+++ b/index.html
@@ -3,37 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Alura Geek</title>
 </head>
 <body>
     <header class="main-header">
+        <img src="./assets/emoji.png" alt="pixel-style girl" class="avatar">
         <h1 class="main-header-title">AluraGeek</h1>
     </header>
-    <section class="product-list-section">
-        <h2 class="section-title">Mis Productos</h2>
-        <dl class="product-list">
-            <div class="product-card">
-                <dt class="product-name">Product Name</dt>
-                <dd>
-                    <img src="" alt="image-description" class="product-img">
-                    <p class="product-description">Product description</p>
-                </dd>
-            </div>
-        </dl>
-    </section>
-    <section class="product-form-section">
-        <h2 class="section-title">Agregar Producto</h2>
-        <form class="product-form">
-            <fieldset>
-                <input type="text" class="form-field" name="name" placeholder="Nombre:">
-                <input type="text" class="form-field" name="price" placeholder="Precio:">
-                <input type="text" class="form-field" name="img-url" placeholder="Image URL">
-            </fieldset>
-            <button class="add-button">Agregar</button>
-            <button class="clear-button">Limpiar</button>
-        </form>
-    </section>
+    <main>
+        <section class="product-list-section">
+            <h2 class="section-title">Mis Productos</h2>
+            <dl class="product-list">
+                <div class="product-card">
+                    <dd class="product-card-content">
+                        <img src="https://images.unsplash.com/photo-1712420294180-dbd8c2a019bd?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image-description" class="product-img">
+                    </dd>
+                    <dt class="product-name">Product Name</dt>
+                    <p class="product-price">$150,00</p>
+                    <button class="remove-button" type="button"><img src="./assets/trash.svg" alt="trash"></button>
+                </div>
+                <div class="product-card">
+                    <dd class="product-card-content">
+                        <img src="https://images.unsplash.com/photo-1712420294180-dbd8c2a019bd?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image-description" class="product-img">
+                    </dd>
+                    <dt class="product-name">Product Name</dt>
+                    <p class="product-price">$150,00</p>
+                    <button class="remove-button" type="button"><img src="./assets/trash.svg" alt="trash"></button>
+                </div>
+                <div class="product-card">
+                    <dd class="product-card-content">
+                        <img src="https://images.unsplash.com/photo-1712420294180-dbd8c2a019bd?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image-description" class="product-img">
+                    </dd>
+                    <dt class="product-name">Product Name</dt>
+                    <p class="product-price">$150,00</p>
+                    <button class="remove-button" type="button"><img src="./assets/trash.svg" alt="trash"></button>
+                </div>
+                <div class="product-card">
+                    <dd class="product-card-content">
+                        <img src="https://images.unsplash.com/photo-1712420294180-dbd8c2a019bd?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image-description" class="product-img">
+                    </dd>
+                    <dt class="product-name">Product Name</dt>
+                    <p class="product-price">$150,00</p>
+                    <button class="remove-button" type="button"><img src="./assets/trash.svg" alt="trash"></button>
+                </div>
+                <div class="product-card">
+                    <dd class="product-card-content">
+                        <img src="https://images.unsplash.com/photo-1712420294180-dbd8c2a019bd?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image-description" class="product-img">
+                    </dd>
+                    <dt class="product-name">Product Name</dt>
+                    <p class="product-price">$150,00</p>
+                    <button class="remove-button" type="button"><img src="./assets/trash.svg" alt="trash"></button>
+                </div>
+                <div class="product-card">
+                    <dd class="product-card-content">
+                        <img src="https://images.unsplash.com/photo-1712420294180-dbd8c2a019bd?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image-description" class="product-img">
+                    </dd>
+                    <dt class="product-name">Product Name</dt>
+                    <p class="product-price">$150,00</p>
+                    <button class="remove-button" type="button"><img src="./assets/trash.svg" alt="trash"></button>
+                </div>
+            </dl>
+        </section>
+        <section class="product-form-section">
+            <h2 class="section-title">Agregar Producto</h2>
+            <form class="product-form">
+                <fieldset>
+                    <input type="text" class="form-field" name="name" placeholder="Nombre:">
+                    <input type="text" class="form-field" name="price" placeholder="Precio:">
+                    <input type="text" class="form-field" name="img-url" placeholder="Image URL">
+                </fieldset>
+                <button class="add-button">Agregar</button>
+                <button class="clear-button">Limpiar</button>
+            </form>
+        </section>
+    </main>
     <footer class="footer">Por Daneska Liz - 2024</footer>
     <script src="./scripts.js"></script>
 </body>
