Agregar dinamismo e interactividad al sitio. - Programar funcionalidades al formulario: Agregar y Despejar. - Consumir API (fakestoreAPI) para renderizar productos dinamicamente. - Programar funcionalidad para remover productos.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <h2 class="section-title">Agregar Producto</h2>
                 <form class="product-form">
                     <fieldset>
-                        <input type="text" class="form-field" name="name" placeholder="Nombre:">
-                        <input type="text" class="form-field" name="price" placeholder="Precio:">
-                        <input type="text" class="form-field" name="img-url" placeholder="Image URL">
+                        <input id="name-field" type="text" class="form-field" name="name" placeholder="Nombre:">
+                        <input id="price-field" type="number" class="form-field" name="price" placeholder="Precio:">
+                        <input id="img-field" type="text" class="form-field" name="img-url" placeholder="Image URL">
                     </fieldset>
-                    <button class="add-button">Agregar</button>
-                    <button class="clear-button">Borrar</button>
+                    <button class="add-button" type="submit">Agregar</button>
+                    <button class="clear-button" type="button">Borrar</button>
                 </form>
             
         </section>
